# Evidential-DualU-Net

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  eval.py  eval_unc.py  pyproject.toml  requirements.txt  setup.py  train.py  unc_study_cent.py
assets/: README.md
configs/: config_eval_ki67_dualunet_12.yaml  config_eval_ki67_dualunet_50140.yaml  config_eval_ki67_dualunet_50149.yaml  config_eval_ki67_dualunet_50282.yaml  config_eval_ki67_dualunet_50859.yaml  config_eval_pannuke_dualunet_12.yaml  config_eval_pannuke_dualunet_12_w.yaml  config_eval_pannuke_dualunet_23.yaml  config_eval_pannuke_dualunet_23_w.yaml  config_eval_pannuke_dualunet_31.yaml  config_eval_pannuke_dualunet_cell.yaml  config_eval_pannuke_unet.yaml  config_train.yaml  config_train_consep_dualunet_base_aaa.yaml  config_train_ki67_dualunet_base_aaa.yaml  config_train_ki67_dualunet_base_aaa_50140.yaml  config_train_ki67_dualunet_base_aaa_50282.yaml  config_train_ki67_dualunet_base_aaa_50859.yaml  config_train_pannuke_dualunet_base.yaml  config_train_pannuke_dualunet_base_2.yaml  config_train_pannuke_dualunet_base_aaa.yaml  config_train_pannuke_dualunet_base_aaa_12.yaml  config_train_pannuke_dualunet_base_aaa_23.yaml  config_train_pannuke_dualunet_base_cell.yaml  config_train_pannuke_dualunet_base_cell_2.yaml  config_train_pannuke_dualunet_base_devis.yaml  config_train_pannuke_dualunet_base_sen_all.yaml  config_train_pannuke_dualunet_base_sen_mis.yaml  config_train_pannuke_dualunet_base_van_all.yaml  config_train_pannuke_dualunet_base_van_mis.yaml  config_train_pannuke_dualunet_bscegra.yaml  config_train_pannuke_dualunet_bscegra_aaa.yaml  config_train_pannuke_dualunet_uwg.yaml  (+14 more)
(+88 files in other folders)
